# ldd_system_listen

./: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/ldd_system_listen_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: ldd_system_listen.podspec
lib/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  ldd_system_listen.dart  ldd_system_listen_bindings_generated.dart  lib.dart
lib/api/: entitys.dart  entitys.freezed.dart  keyboard_listen.dart  logger.dart  multiinput.dart  syste.dart  syste.freezed.dart
linux/: CMakeLists.txt
macos/: ldd_system_listen.podspec
macos/Classes/: ldd_system_listen.c
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: entitys.rs  keyboard_listen.rs  level_filter.rs  logger.rs  mod.rs  multiinput.rs  syste.rs
src/: CMakeLists.txt  ldd_system_listen.c
windows/: CMakeLists.txt
